# spero

./: .bazelrc  .editorconfig  .gitignore  BUILD  Dockerfile  README.md  TODO  WORKSPACE  docker-compose.yml  go.mod  go.sum  prometheus.yml  startup.sh
cmd/: main.go  spero.go
cmd/commands/: flag.go  run.go  shutdown.go
cmd/job/: job.go
cmd/job/metajob/: metajob.go
cmd/job/oddjob/: oddjob.go
cmd/poll/: poll.go
cmd/server/: metric.go  rpc.go
cmd/service/: service.go
cmd/service/metricservice/: metricservice.go
cmd/spero/: main.go
config/: example.yaml
examples/: result.yaml
pb/: odd.pb.go  odd.proto
pkg/client/: BUILD.bazel  client.go  client_test.go
pkg/client/base/: base.go
pkg/client/eventclient/: eventclient.go  eventclient_test.go
pkg/client/jc/: BUILD.bazel  jc.go  jc_test.go  match.go  odd.go  parse.go  parse_test.go
pkg/client/jc/testdata/: had.json  historical.json
pkg/client/oddclient/: oddclient.go  oddclient_test.go
pkg/errors/: errors.go
pkg/input/: input.go
pkg/input/inpututil/: util.go
pkg/input/odd/: odd.go
pkg/input/result/: result.go
pkg/message/: message.go
pkg/metric/: metric.go
pkg/poll/: poll.go  poll_test.go
pkg/process/: process.go
pkg/schema/: match.go  match_test.go  proto.go  schema.go  schema_test.go  tag.go
pkg/schema/match/: detail.go  mapping.go  match.go  result.go  situation.go  timeline.go
pkg/schema/odd/: base_test.go  odd.go  odd_test.go  outcome.go
pkg/schema/odd/meta/: base.go  league.go  livescore.go  team.go
pkg/schema/odd/oddtype/: fha.go  had.go  hft.go  hha.go
pkg/schema/sportradar/: container.go
pkg/scraper/metascraper/: metascraper.go  metascraper_test.go
pkg/scraper/oddscraper/: oddscraper.go  oddscraper_test.go
pkg/storage/: storage.go  storage_test.go
pkg/storage/store/: index.go  kv.go  kv_test.go
pkg/tag/: tag.go  tag_test.go
proto/: BUILD.bazel  doc.go  regenerate.sh
proto/model/: BUILD.bazel  match.go  match.pb.go  match.proto  odd.pb.go  odd.proto  score.go
rules/: BUILD  config.json
