load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "model_proto",
    srcs = [
        "match.proto",
        "odd.proto",
    ],
    visibility = ["//visibility:public"],
    deps = ["@com_google_protobuf//:timestamp_proto"],
)

go_proto_library(
    name = "model_go_proto",
    compilers = ["//:go_apiv2"],
    importpath = "github.com/twistedogic/spero/proto/model",
    proto = ":model_proto",
    visibility = ["//visibility:public"],
    deps = [
        "@com_github_golang_protobuf//ptypes/timestamp",  # keep
    ],
)

go_library(
    name = "model",
    embed = [":model_go_proto"],
    importpath = "github.com/twistedogic/spero/proto/model",
    visibility = ["//visibility:public"],
)
