load("@io_bazel_rules_go//go:def.bzl", "go_library", "go_test")

go_library(
    name = "jc",
    srcs = [
        "jc.go",
        "match.go",
        "odd.go",
        "parse.go",
    ],
    importpath = "github.com/twistedogic/spero/pkg/client/jc",
    visibility = ["//visibility:public"],
    deps = [
        "//pkg/client",
        "//proto/model",
        "@com_github_pkg_errors//:errors",
        "@org_golang_google_protobuf//types/known/timestamppb",
    ],
)

go_test(
    name = "jc_test",
    srcs = [
        "jc_test.go",
        "parse_test.go",
    ],
    data = glob(["testdata/**"]),
    embed = [":jc"],
    deps = ["@com_github_google_go_cmp//cmp"],
)
